chore(setup): improvements

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -4,6 +4,10 @@ sidebar_position: 1
 
 # Introdução
 
+import {
+  TeamRow,
+} from '@site/src/components/TeamProfile';
+
 Todos os possíveis cenários de sucesso e erros nos fluxos de mensagens transacionadas no SPI.
 
 ## Por que?
@@ -15,3 +19,14 @@ Esse projeto tem como objetivo documentar todos os possíveis cenários de suces
 * As informações aqui contidas podem estar desatualizadas, faça testes e use por sua conta e risco;
 * Caso encontre alguma informação incorreta, nos ajude criando uma pull request (PR), solicitação de alteração, no GitHub. Essa ferramenta deixa muito simples, apenas clique em **Edit this page**;
 * Acessar o catálogo de serviços do sistema financeiro nacional (SFN) para verificar as informações do BACEN. [Clique aqui](https://www.bcb.gov.br/estabilidadefinanceira/comunicacaodados).
+
+## Contribuidores
+
+<TeamRow data={[
+  {
+    name: "Guilherme Decampo", 
+    githubUrl: "https://github.com/guilhermedecampo", 
+    linkedinUrl: "https://linkedin.com/guilherme-decampo", 
+    description: "CEO na Vanna, consultor Pix na PayVentures, entusiasta do Pix e do mercado digital",  
+  }
+]}/>
