--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -26,7 +26,7 @@ Esse projeto tem como objetivo documentar todos os possíveis cenários de suces
   {
     name: "Guilherme Decampo", 
     githubUrl: "https://github.com/guilhermedecampo", 
-    linkedinUrl: "https://linkedin.com/guilherme-decampo", 
-    description: "CEO na Vanna, consultor Pix na PayVentures, entusiasta do Pix e do mercado digital",  
+    linkedinUrl: "https://linkedin.com/in/guilherme-decampo", 
+    description: "CEO na Vanna, consultor Pix na Pay Ventures, entusiasta do Pix e do mercado digital",  
   }
 ]}/>
