--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -27,6 +27,6 @@ Esse projeto tem como objetivo documentar todos os possíveis cenários de suces
     name: "Guilherme Decampo", 
     githubUrl: "https://github.com/guilhermedecampo", 
     linkedinUrl: "https://linkedin.com/in/guilherme-decampo", 
-    description: "CEO na Vanna, consultor Pix na Pay Ventures, entusiasta do Pix e do mercado digital",  
+    description: "CTO no Iniciador, consultor Pix na Pay Ventures, entusiasta do Pix e do mercado digital",  
   }
 ]}/>
